# rlearnio

./: Cargo.toml  Secrets.toml
migrations/2023-05-14-071121_create_talents/: up.sql
migrations/2023-05-14-072246_create_courses/: down.sql  up.sql
src/: main.rs
src/controllers/: mod.rs  talents.rs
src/models/: course.rs  mod.rs  talent.rs
