[package]
name = "elearnio"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.16.0"
actix-web = "4.3.1"
shuttle-actix-web = "0.16.0"
tokio = "1.28.1"
diesel = "2.0.4"
dotenvy = "0.15.7"
